# careerflow-project

./: .dockerignore  .env.example  .gitignore  LICENSE  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  run.py
backend/: __init__.py  run.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  company_research.py  job_matching.py  router.py  translation.py
backend/app/api/routes/: __init__.py  chat.py  conversation.py  resume.py
backend/app/core/: config.py  llm.py
backend/app/models/: __init__.py  chat.py  conversation.py  resume.py
backend/app/services/: __init__.py  firebase_service.py  resume_parser.py  vector_store.py
docs/: ENV_FILE_SETUP.md  RAILWAY_DEPLOYMENT.md  RESPONSIBLE_AI.md
frontend/: app.js  index.html  styles.css
tests/: conftest.py  test_agents.py  test_config.py  test_export.py  test_models.py  test_routing.py
