[project]
name = "careerflow-resume-optimizer"
version = "1.0.0"
description = "A conversational AI system for resume optimization using specialized agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Mrinal Bhan" }
]
keywords = [
    "resume",
    "optimization",
    "ai",
    "langchain",
    "fastapi",
    "llm",
    "career"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # FastAPI and Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0,<14.0",
    
    # LangChain and AI
    "langchain>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.15",
    "langchain-chroma>=0.1.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=1.0.0",
    
    # Groq (for Llama 3.3, Mixtral)
    "groq>=0.11.0",
    
    # HuggingFace (optional local models)
    "huggingface-hub>=0.24.0",
    "sentence-transformers>=2.7.0",
    
    # Vector Database
    "chromadb>=0.5.0",
    
    # Firebase
    "firebase-admin>=6.5.0",
    
    # Document Processing
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    
    # Web Scraping and Research
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=6.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # Core dependencies (pinned for compatibility)
    "pillow>=10.3.0,<11.0.0",
    "tiktoken>=0.7.0,<0.8.0",
    "openai>=1.45.0",
    "requests>=2.32.2",
    "tqdm>=4.66.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/careerflow-resume-optimizer"
Documentation = "https://github.com/yourusername/careerflow-resume-optimizer#readme"
Repository = "https://github.com/yourusername/careerflow-resume-optimizer"
Issues = "https://github.com/yourusername/careerflow-resume-optimizer/issues"

[project.scripts]
careerflow = "backend.app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

